--- a/pages/1.html
+++ b/pages/1.html
@@ -60,7 +60,7 @@
 
     <hr id="about" class="my-3 container pt-5" />
     <div class="container my-4">
-      <h2 class="text-center" data-aos="fade-up">St. John's Church(Собор Ионна Предтеча)</h2>
+      <h2 class="text-center" data-aos="fade-up">St. John's Church(Собор Иона Предтечи)</h2>
       <br/>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 text-justify" data-aos="fade-up">
@@ -69,10 +69,12 @@
             There is no exact date of the foundation of the church. Some sources give the founding date 1820, others give the date 1840. 
             The building of the first church was wooden. It had the strong stone foundation, and a bell tower was built on a dome.The church was built firstly and  the bell tower was build later.  
             Now the Church of St. John, or as it is also called the Church of John the Savior, is located in a beautiful park and is visible far from all the surroundings. It is decorated with many golden icons and an iconostasis. It is a holy place where residents come to pray, repent of their earthly sins, and be alone with themselves and God. 
-          </p>Точной даты основания храма нет. Одни источники называют дату основания храма 1820 год, другие 1840.  
+          </p>
+          <p class="main">
+          Точной даты основания храма нет. Одни источники называют дату основания храма 1820 год, другие 1840.  
             Здание первого храма было деревянное, крепкое, на каменном фундаменте, с колокольней, устроенной на куполе. 
-            Сначала был построен храм, а позднее колокольня. Основание собора связывают с именем священнослужителя Феодосия Маруневича.
-             Примечательно, что колокольня была построена на 16 лет позже, чем собор. 
+            Сначала был построен храм, а позднее колокольня. 
+             
              Сейчасс церковь Святого Иоана или как ее еще называют Церковь Иоана Спасителя расположена в красивом парке и видна далеко со всех окрестностей. 
              Её украшают много золотых икон и иконостас. Оно является святым местом, куда жители приходят помолиться, покаяться в земных грехах, побыть в уединении с самим собой и Богом. 
              Собор является духовным центром города. 
