--- a/pages/15.html
+++ b/pages/15.html
@@ -75,11 +75,13 @@
             The concept of a restaurant is not just about food. After a delicious meal, you can take an interesting tour of the factory, visit the «Museum of Forgotten Things», take a bike ride, participate in competitions and win a prize, and play darts, table tennis and billiards for outdoor enthusiasts.
           </p>
         <p class="main">
-          Идея открытия ресторана пришла в процессе реставрации исторического винного подворья «Vinuri de Comrat», которое основано в 1987 году в период Бессарабской губернии.
-          Для Вас есть каминный зал на 12 человек в винном погребе 1897 года, тщательно реставрированном и обустроенном в стиле Бессарабской губернии. Также винный погреб вмещает до 80 человек, если у Вас намечается большое мероприятие.
+          Идея открытия ресторана пришла в процессе реставрации исторического винного подворья «Vinuri de Comrat», 
+          которое основано в 1987 году в период Бессарабской губернии.
+          Для Вас есть каминный зал на 12 человек в винном погребе 1897 года, тщательно реставрированном 
+          и обустроенном в стиле Бессарабской губернии. Также винный погреб вмещает до 80 человек, если у Вас намечается большое мероприятие.
           Терраса с видом на здания архитектуры 19 века, фонтанами и виноградниками готова принять Вас в уютных беседках, утопающих в зелени, цветах и пении птиц.
           Мясные блюда готовятся на тандыре, мангале и хоспере на дровах, что придаёт им особенный вкус.
-          Мы очень любим нашу работу, и каждое блюдо- это произведение искусства, в которое вложена южная душа.
+         Повара очень любят свою работу, и каждое блюдо- это произведение искусства, в которое вложена южная душа.
           Особенное место в меню ресторана занимают удивительные южные вина, которые идеально подходят к нашим блюдам.
           Концепция ресторана — это не только еда. Вкусно поев, Вы можете пройти интересную экскурсию по заводу, посетить «Музей забытых вещей», совершить велопрогулку, поучаствовать в конкурсах и выиграть приз, а также для любителей активного отдыха есть дартс, настольный теннис и бильярд.
         </p>
