--- a/pages/3.html
+++ b/pages/3.html
@@ -71,10 +71,14 @@
             We have a great opportunity to touch the culture and traditions of another nation without leaving our hometown.
           </p>
           <p class="main">
-            Турецкая библиотека имени Ататюрка в Комрате открылась 26 июня 1998 года при содействии турецкого агентства ТИКА. На момент открытия книжный  Фонд насчитывал 300 единиц, а сегодня он насчитывает около 8 тысяч.
-            Директором библиотеки является  Василиса Танасогло  Турецкая библиотека имеет многочисленных читателей.  Библиотека обеспечена очень интересной литературой по разным отраслям знаний. 
-            Кроме литературы, в библиотеке Ататюрка проводится много разных мероприятий: встречи с писателями, выставки картин, презентация новых книг, школа шахмат, и, конечно, бесплатные курсы турецкого языка.
-            А доктор истории Степан Булгар в 2018 году выпустил специальный выпуск журнала «Sabaa yıldızı», посвященный библиотеке. 
+            Турецкая библиотека имени Ататюрка в Комрате открылась 26 июня 1998 года при содействии турецкого агентства ТИКА.
+             На момент открытия книжный  Фонд насчитывал 300 единиц, а сегодня он насчитывает около 8 тысяч.
+            Директором библиотеки является  Василиса Танасогло  Турецкая библиотека имеет многочисленных читателей. 
+             Библиотека обеспечена очень интересной литературой по разным отраслям знаний. 
+            Кроме литературы, в библиотеке Ататюрка проводится много разных мероприятий: 
+            встречи с писателями, выставки картин, презентация новых книг, школа шахмат, и, конечно, 
+            бесплатные курсы турецкого языка.
+           
             Мы имеем уникальную возможность прикоснуться к культуре и традициям другого народа не покидая родного города.
           </p> 
             
