--- a/pages/4.html
+++ b/pages/4.html
@@ -9,7 +9,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link href="../css/styles.css" rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -65,32 +64,34 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 text-justify" data-aos="fade-up">
           <p class="main">
-            The Comrat Library was established in 1946. 
-            The collection of the library at the time included 3,700 copies and 1,300 readers. 
-            In the 60s, the fund grew to 20 thousand books. 
-            In different years, the library was called differently. 
-            In 1975 it was called «Central library»,, since 1991 –« Public Library», in 1995 it became called «Regional Library». 
-            The main reason to foundation of this library was creation the Department of Local History with the corresponding  
-            literature and bibliography. 
+            The Comrat Library was established in 1946. The collection of the library at the time included 3,700 copies and 1,300 readers. 
+            In the 60s, the fund grew to 20 thousand books.
+
+            In different years, the library was called differently. In 1975 it was called «Central library», 
+            since 1991 –« Public Library», in 1995 it became called «Regional Library».
+            The main reason to foundation of this library was creation the Department of Local History with the corresponding literature and bibliography.
+
             The Comrat Regional Library has a rich collection of Russian, foreign and national literature. 
-            In addition to its main activities the library arganize various events. 
-            The  Comrat Regional Library is very popular among pupils. 
-           The library is provided with very interesting literature on various branches of knowledge. 
+            In addition to its main activities the library organizes various events. The Comrat Regional Library is very popular among pupils. 
+            The library is provided with very interesting literature on various branches of knowledge.         
           </p>
           <p class="main">
-            Каждая картина, взятая в галерею, и каждая порядочная книга, попавшая в библиотеку, 
-            как бы они малы не были, служат великому делу - скоплению в стране богатств. А. П. Чехов
-            Комратскаяя библиотека была создана в 1946 году. 
-            В то время библиотечный фонд насчитывал 3700 экземпляров и 1300 читателей. 
-            В 60-х годах фонд вырос до 20 тысяч. книги. В разные годы библиотека называлась по-разному, в 1975 г. – источники, 
-            с 1991 г. – городской публиковской, в 1995 г. она стала называться региональной, 
-            основной причиной послужило создание краеведческого отдела с соответствующей литературой и библиографией. 
-            Комратская Региональная Библиотека очень популярна среди молодёжи. 
-            В библиотеки периодически проводят экскурсии, круглые столы. 
-            Маленькие читатели с большим удовольствием знакомятся с новыми героями книг, учатся добру и чести. 
-            Как говорил  Г. В. Лейбниц: «Библиотеки – это сокровищницы всех богатств человеческого духа.»
-          </p>
+            
+            Комратская библиотека была основана в 1946 году. 
+            Фонд библиотеки в то время насчитывал 3700 экземпляров и 1300 читателей. 
+            В 60-е годы фонд вырос до 20 тысяч книг.
+            В разные годы библиотека называлась по-разному. 
+            В 1975 году она называлась «Центральная библиотека», с 1991 года – «Публичная библиотека», 
+            в 1995 году стала называться «Областная библиотека». 
+            Основной причиной основания этой библиотеки стало 
+            создание краеведческого отдела с соответствующей литературой и библиографией.
+            Комратская областная библиотека располагает богатой коллекцией русской, зарубежной и национальной литературы. 
+            В дополнение к своей основной деятельности библиотека организует различные мероприятия. 
+            Комратская областная библиотека пользуется большой популярностью среди школьников. 
+            Библиотека снабжена очень интересной литературой по различным отраслям знаний.
+           </p>
         </div>
+
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6" >
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner m-top-25">
