--- a/pages/5.html
+++ b/pages/5.html
@@ -65,18 +65,30 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 text-justify" data-aos="fade-up">
           <p class="main">
-            «Comrat Wines» is the first and the oldest winery  located in the south of Moldova, in Gagauzia, Comrat.
-            The winery was founded in 1895 . The first foundation stone was placed 1895.  
-            The oldest enterprise and tourist complex is headed by Khmelnitsky Anatoly.
-             Comrat winemakers have been preserving and passing on from generation to generation the classic traditions of making unique Gagauz grape wines  for more than 120 years. This  enterprise opens the doors not only to the atmosphere of the wine farmstead of the Gagauz winery, but also to the national dishes, and most importantly to the historical past of the southern region. During the trip you can walk through the landscaped territory of the winery, touch the architecture of the XIX century, the history of the oldest factory in Bessarabia. We have a great opportunity to walk through the historical basement «Beciul Vechi», see the shady alleys named after the varieties of wines. Also we can visit the local museum. In this museum are stored household items and industrial equipment from the Soviet Union period.
-            A trip to «Vinuri de Comrat» is an opportunity to  touch  the history, traditions and culture of the Gagauz people.
-          </p>
+            «Comrat Wines» is the first and the oldest winery located in the south of Moldova, in Gagauzia, Comrat.
+
+            The winery was founded in 1897. The first foundation stone was placed in 1895. The oldest enterprise and tourist complex is headed by Khmelnitsky Anatoly.
+            
+            Comrat winemakers have been preserving and passing on from generation to generation the classic traditions of making unique Gagauz grape wines for more than 120 years. This enterprise opens the doors not only to the atmosphere of the wine farmstead of the Gagauz winery, but also to the national dishes, and most importantly to the historical past of the southern region. During the trip you can walk through the landscaped territory of the winery, touch the architecture of the XIX century, the history of the oldest factory in Bessarabia. We have a great opportunity to walk through the historical basement «Beciul Vechi», see the shady alleys named after the varieties of wines. Also, we can visit the local museum. In this museum are stored household items and industrial equipment from the Soviet Union period.
+            
+            A trip to «Vinuri de Comrat» is an opportunity to touch the history, traditions and culture of the Gagauz people.         </p>
           <p class="main">
-            «Вина Комрата» — старейшее винодельческое предприятие, расположенное на юге Молдовы. 
-            Винзавод был основан в 1895 году . Первая продукция появилась в 1897 году. В результате приватизации, в 1995,  в  комратский винзавод был преобразован в SA «Vinuri de Comrat»,
-            Сегодня во главе старейшего предприятия и туристического комплекса находится…..
-             Вот уже более 120 лет виноделы Комрата сохраняют и передают из поколения в поколение классические традиции изготовления уникальных гагаузских виноградных вин. Это предприятие открывает двери не только в атмосферу винного подворья Гагаузской винодельни, но и к национальным блюдам, а самое главное – к историческому прошлому южного региона. Во время экскурсии вы сможете прогуляться по благоустроенной территории винодельни, прикоснуться к архитектуре XIX века, истории старейшего завода Бессарабии. У нас есть прекрасная возможность прогуляться по историческому подвалу «Beciul Vechi», увидеть тенистые аллеи, названные в честь сортов вин. Также мы можем посетить местный музей. В этом музее хранятся предметы домашнего обихода и промышленное оборудование времен Советского Союза.
-            Поездка в «Vinuri de Comrat» - это возможность прикоснуться к истории, традициям и культуре гагаузского народа.
+            «Vinuri de Comrat» - первая и старейшая винодельня, расположенная на юге Молдовы, в Гагаузии, Комрат.
+
+            Винодельня была основана в 1897 году. Первый камень в фундамент был заложен в 1895 году. 
+            Старейшее предприятие и туристический комплекс возглавляет Анатолий Хмельницкий.
+
+            Виноделы Комрата уже более 120 лет сохраняют и передают из поколения в поколение 
+            классические традиции изготовления уникальных гагаузских виноградных вин. 
+            Это предприятие открывает двери не только в атмосферу винного подворья Гагаузского винзавода,
+            но и в национальные блюда, а самое главное - в историческое прошлое южного региона. 
+            Во время поездки вы сможете прогуляться по благоустроенной территории винодельни, 
+            прикоснуться к архитектуре XIX века, истории старейшего завода Бессарабии. 
+            У нас есть прекрасная возможность прогуляться по историческому подвалу «Beciul Vechi», 
+            увидеть тенистые аллеи, названные в честь сортов вин. Кроме того, мы можем посетить местный музей. 
+            В этом музее хранятся предметы домашнего обихода и промышленное оборудование времен Советского Союза.
+
+            Поездка в «Vinuri de Comrat» - это возможность прикоснуться к истории, традициям и культуре гагаузского народа.  
           </p> 
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6" >
