--- a/pages/7.html
+++ b/pages/7.html
@@ -64,16 +64,22 @@
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 text-justify" data-aos="fade-up">
             
           <p class="main"> 
-            The Comrat stadium is a sports complex in Comrat and the home field for such football clubs as «Gagauzia» and «Mayak». It was built in 2012 at the expense of the Executive Committee of Gagauzia.
-            On 18 October 2018, the Turkish President Recep Tayyip Erdoğan landed in a helicopter on the Comrat stadium, after which he promised to renovate it. Thus, in 2019 reconstruction of the facility began. The stadium offers a capacity of 5000 spectators and has six four-hundred-meter running tracks and a large football field.
-            The stadium was named after Victor Mumzhiev, the chairman of the Comrat collective farm in the 1950s and 1960s, who made a significant contribution to the development of sports in Comrat.
-          </p>
+            he Comrat stadium is a sports complex in Comrat and the home field for such football clubs as «Oguzsport» and «Umutluk». It was built in 2012 at the expense of the Executive Committee of Gagauzia.
+
+          On 18 October 2018, the Turkish President Recep Tayyip Erdoğan landed in a helicopter on the Comrat stadium, after which he promised to renovate it. Thus, in 2019 reconstruction of the facility began. The stadium offers a capacity of 5000 spectators and has six four-hundred-meter running tracks and a large football field.
+
+          The stadium was named after Victor Mumzhiev who made a significant contribution to the development of sports in Comrat.          </p>
 
           <p class="main"> 
-            Стадион имени Мумжиева — спортивный комплекc Комрата и домашнее поле футбольных команд «Гагаузия» и «Маяк». Был построен в 2012 году за счёт средств Исполкома Гагаузии.
-            18 октября 2018 года президент Турции Реджеп Тайип Эрдоган совершил посадку на вертолёте на Комратском стадионе, после чего пообещал провести на нём ремонт. Так, в 2019 году началось работы по реконструкции объекта. Стадион вмещает в себя 5 тыс. зрителей, а также оснащён шестью четырёхсотметровыми асфальтированными беговыми дорожками и большим футбольным полем.
-            Имя присвоено в честь председателя комратского колхоза в 1950-е — 1960-е годы Виктора Мумжиева, внёсшего заметный вклад в развитие спорта в Комрате.
-          </p>
+            Стадион «Комрат» - спортивный комплекс в Комрате и домашнее поле для таких футбольных клубов, как «Огузспорт" 
+            и "Умутлук». Он был построен в 2012 году на средства Исполнительного комитета Гагаузии.
+
+            18 октября 2018 года президент Турции Реджеп Тайип Эрдоган приземлился на вертолете на стадионе в Комрате, 
+            после чего пообещал отремонтировать его. Таким образом, в 2019 году началась реконструкция объекта. 
+            Стадион вмещает 5000 зрителей и располагает шестью четырехсотметровыми беговыми дорожками и 
+            большим футбольным полем.
+            
+            Стадион был назван в честь Виктора Мумжиева, который внес значительный вклад в развитие спорта в Комрате.          </p>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6" >
           <img src="../images/Img7.jpg" class="img-center" data-aos="fade-up" alt="">
