--- a/pages/8.html
+++ b/pages/8.html
@@ -76,8 +76,9 @@
             combination of centuries-old trees and young seedlings.
           </p>
           <p class="main">
-            Точной даты основания центрального парка в Боях нет. 
-            У ученых есть некоторые основания полагать, что церковь Святого Иоанна,которая находится здесь, была основана в 1820 году, и, возможно, 
+            Точной даты основания центрального парка в Комрате нет. 
+            У ученых есть некоторые основания полагать, что церковь Святого Иоанна,которая находится здесь, 
+            была основана в 1820 году, и, возможно, 
             в этот период был основан центральный парк. 
             Современный парк в Комрате был создан в 2013 году. 
             Это пространство включает в себя около 1600 декоративных растений: деревьев, кустарников и цветов. 
@@ -85,8 +86,7 @@
             Люди собираются вокруг деревьев, чтобы сфотографироваться 
             и полюбоваться красотой цветущей японской сакуры.
             Также в Центральном парке находится мемориал, посвященный основанию города Комрат. 
-            Памятник представляет собой гранитный камень с высеченной надписью: 
-            «Город Комрат был основан в 1789 году».
+            
             У вас есть  возможность полюбоваться прекрасным сочетанием древних деревьев и молодых саженцев. 
           </p>  
         </div>
