--- a/pages/9.html
+++ b/pages/9.html
@@ -65,21 +65,25 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 text-justify" data-aos="fade-up">
           <p class="main">
-            It was opened in 2019 with the assistance of Turkish partners and the local municipality.
+            It was opened in 2019 with the assistance of Turkish partners and the local municipality. 
             In the House of Creativity, children can develop their abilities in arts and crafts, 
-            fine arts, design, dance, vocal, theater, and other creative activities. 
-            Classes are held in excellent conditions created in the new building of the House of Creativity. Currently, 
-            there are 17 clubs in various fields.
+            fine arts, design, dance, vocal, theater, and other creative activities.
+
+            Classes are held in excellent conditions created in the new building of the House of Creativity.
+            Currently, there are 17 clubs in various fields.
+
+            This is a great place where children can take their leisure time,relax and do what they love.  
           </p>
           <p class="main">
-            Дом Культуры муниципия Комрат  был основан в 1961 году. 
-            В 2023году Дом Культуры отметил свой юбилей, 60 лет.
-            Очень старое здание, забитое хорошей мощной энергией на сцене которого выступали такие известные 
-            деятели культуры как Пометко Семен, Мойсе Петр, Рушика Константин. 
-            ДК является одним из самых мощных пульсов Гагаузии, здесь занимается наибольшее количество участников, 
-            детей, 13 образцовых коллективов, работает муниципальный музыкально-драматический театр им С.Кеся , 
-            а также занимается ансамбль народного танца Дюз Ава ,работает духовой оркестр башкана и 
-            профессиональный коллектив Серин су.
+            Дом Творчества открылся в 2019 году при содействии турецких партнеров и местного муниципалитета.
+
+            В Доме творчества дети могут развить свои способности в декоративно-прикладном, 
+            изобразительном искусстве, заниматься конструированием, танцами, вокалом, театром и другой творческой деятельностью.
+
+            Занятия проходят в отличных условиях, созданных в новом здании Дома творчества. 
+            В настоящее время в учреждении действуют 17 кружков по различным направлениям.
+
+            Это прекрасное место, где дети могут занять свой досуг, отдохнуть и заняться любимым делом.
           </p>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6" >
