--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="card-body">
            
             <h6 class="card-title">St. John's Church</h6>
-            <h6 class="card-title">Собор Иона Предтеча</h6>
+            <h6 class="card-title">Собор Иона Предтечи</h6>
             <a class="btn btn-success" href="pages/1.html" role="button">Далее</a>
           </div>
         </div>
@@ -160,8 +160,8 @@
           <div class="card text-center" data-aos="fade-up">
             <img src="images/img7.jpg" class="card-img-top" alt="Img7">
             <div class="card-body">
-              <h5 class="card-title">Comrat Stadium named after Mumzhiev</h5>
-              <h5 class="card-title">Комратский стадион имени Мумжиева</h5>
+              <h5 class="card-title">Comrat Stadium named after V. Mumzhiev</h5>
+              <h5 class="card-title">Комратский стадион имени В. Мумжиева</h5>
               
               <a class="btn btn-success" href="pages/7.html" role="button">Далее</a>
             </div>
@@ -204,8 +204,8 @@
           <div class="card text-center" data-aos="fade-up">
             <img src="images/img6.jpg" class="card-img-top" alt="Img6">
             <div class="card-body">
-              <h5 class="card-title">Monument to Afghan soldiers</h5>
-              <h5 class="card-title">Памятник воинам-афганцам </h5>
+              <h5 class="card-title">Monument to the Soldiers who fell in Afghanistan </br>
+              Памятник солдатам, павшим в Афганистане </h5>
               <a class="btn btn-success" href="pages/6.html" role="button">Далее</a>
             </div>
           </div>
