--- a/страницы/1.html
+++ b/страницы/1.html
@@ -60,7 +60,7 @@
 
     <hr id="about" class="my-3 container pt-5" />
     <div class="container my-4">
-      <h2 class="text-center" data-aos="fade-up">St. John's Church(Собор Иона Предтечи)</h2>
+      <h2 class="text-center" data-aos="fade-up">St. John's Church </br>Собор Иона Предтечи</h2>
       <br/>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 text-justify" data-aos="fade-up">
@@ -107,7 +107,7 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
-            <p class="text-center">Собор Ионна Предтеча.(St. John's Church)</p>
+            <p class="text-center">St. John's Church</br>Собор Иона Предтечи.</p>
           </div>
         </div> 
       </div>
